--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "eslint-webpack-plugin": "^3.0.1",
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.3.2",
+        "less-loader": "^10.0.1",
         "mini-css-extract-plugin": "^2.0.0",
         "prettier": "^2.3.2",
         "process": "^0.11.10",
