--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
         "build": "rimraf build && webpack --node-env production",
         "build:dev": "rimraf dist && webpack --node-env development --progress",
         "build:analyze": "rimraf build && webpack --node-env production --progress=profile --analyze",
-        "lint": "eslint ./src/**/*.{js,jsx}",
-        "lint:fix": "eslint ./src/**/*.{js,jsx} --fix"
+        "lint": "eslint ./src/**/*.{ts,tsx}",
+        "lint:fix": "eslint ./src/**/*.{ts,tsx} --fix"
     },
     "author": "Lizhong Zhang",
     "license": "ISC",
@@ -16,8 +16,15 @@
         "@babel/plugin-transform-runtime": "^7.14.5",
         "@babel/preset-env": "^7.14.7",
         "@babel/preset-react": "^7.14.5",
+        "@babel/preset-typescript": "^7.15.0",
         "@babel/runtime": "^7.14.6",
         "@pmmmwh/react-refresh-webpack-plugin": "^0.5.1",
+        "@types/react": "^17.0.27",
+        "@types/react-dom": "^17.0.9",
+        "@types/react-router": "^5.1.17",
+        "@types/react-router-dom": "^5.3.1",
+        "@typescript-eslint/eslint-plugin": "^4.33.0",
+        "@typescript-eslint/parser": "^4.33.0",
         "autoprefixer": "^10.2.6",
         "babel-loader": "^8.2.2",
         "copy-webpack-plugin": "^9.0.1",
@@ -34,11 +41,11 @@
         "eslint-plugin-react-hooks": "^4.2.0",
         "eslint-webpack-plugin": "^3.0.1",
         "file-loader": "^6.2.0",
+        "fork-ts-checker-webpack-plugin": "^6.3.4",
         "html-webpack-plugin": "^5.3.2",
         "mini-css-extract-plugin": "^2.0.0",
         "prettier": "^2.3.2",
         "process": "^0.11.10",
-        "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-refresh": "^0.10.0",
@@ -46,6 +53,7 @@
         "react-router-dom": "^5.2.0",
         "rimraf": "^3.0.2",
         "style-loader": "^3.0.0",
+        "typescript": "^4.4.3",
         "url-loader": "^4.1.1",
         "webpack": "^5.41.1",
         "webpack-bundle-analyzer": "^4.4.2",
