--- a/package.json
+++ b/package.json
@@ -61,5 +61,9 @@
         "webpack-dev-server": "^4.7.4",
         "webpack-manifest-plugin": "^4.1.1",
         "webpack-merge": "^5.8.0"
+    },
+    "dependencies": {
+        "@reduxjs/toolkit": "^1.8.1",
+        "react-redux": "^7.2.8"
     }
 }
