--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
         "fork-ts-checker-webpack-plugin": "^7.1.1",
         "html-webpack-plugin": "^5.5.0",
         "mini-css-extract-plugin": "^2.5.3",
+        "postcss": "^8.4.12",
+        "postcss-loader": "^6.2.1",
         "prettier": "^2.5.1",
         "process": "^0.11.10",
         "react": "^17.0.2",
@@ -53,6 +55,7 @@
         "react-router-dom": "^6.2.1",
         "rimraf": "^3.0.2",
         "style-loader": "^3.3.1",
+        "tailwindcss": "^3.0.24",
         "typescript": "^4.5.5",
         "url-loader": "^4.1.1",
         "webpack": "^5.68.0",
